# camshift_tracker

./: CMakeLists.txt  README.md
include/camshift_tracker/: camshift_tracker.h
src/: camshift_tracker.cpp  main.cpp
